fix: table sizes on small screens

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -143,7 +143,11 @@ a {
 
     th, td {
         padding: none;
+        font-size: 10px;
     }
+
+
+
 }
 
 table {
